Fixed slight icon misalignment

--- a/waybar/style/[Dark] Half-Moon.css
+++ b/waybar/style/[Dark] Half-Moon.css
@@ -196,7 +196,7 @@ color: #F3F4F5;
 	background: #0F1419;
 	border-radius: 50px 50px;
 	margin: 5px;
-	padding: 2px 15px;
+	padding: 2px 17px 2px 14px;
 }
 
 #custom-hyprbindings {
